Generics_Extend_WildCard/Code9_error_report.txt
javac errors for Code9.java 
Code9.java:13: error: no suitable method found for add(Number)
        a.add(element);
         ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; Number cannot be converted to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; Number cannot be converted to CAP#1)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Number from capture of ? extends Number
Code9.java:43: error: incompatible types: List<String> cannot be converted to List<? extends Number>
        processElements(a4);
                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
 
========================= 
ExtendJ errors for Code9.java 
 
========================= 
Eclipse ECJ errors for Code9.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code9.java (at line 13)
	a.add(element);
	  ^^^
The method add(capture#2-of ? extends Number) in the type List<capture#2-of ? extends Number> is not applicable for the arguments (Number)
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Extend_WildCard\Code9.java (at line 43)
	processElements(a4);
	^^^^^^^^^^^^^^^
The method processElements(List<? extends Number>) in the type Code9 is not applicable for the arguments (List<String>)
----------
2 problems (2 errors)
